feat: extract ensureTopicsPatternFullyQualified method and add unit tests
Signed-off-by: oneby-wang <onebywang@qq.com>